fix: products margin on mobile

--- a/src/assets/sass/pages/Home/_Home-products.scss
+++ b/src/assets/sass/pages/Home/_Home-products.scss
@@ -3,7 +3,6 @@
 .Home-products {
   background: transparent linear-gradient(56deg, #21325d 0%, #214c93 100%) 0% 0%
     no-repeat padding-box;
-  margin: 0 -12.5%;
   padding-top: 2.813rem;
 
   position: relative;
@@ -65,6 +64,8 @@
 
   @media (max-width: 768px) {
     background: #1e2040;
+    padding: 0 $home-mobile-padding;
+    padding-top: 3.125rem;
 
     .header1 {
       text-align: center;
